마이페이지 xml 오류 수정

--- a/app/src/main/res/layout/frag5.xml
+++ b/app/src/main/res/layout/frag5.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#F3F3F3">
 
     <LinearLayout
@@ -11,43 +10,104 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <!-- 상단 텍스트뷰와 이미지뷰를 가로로 배치하는 LinearLayout -->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="40sp" />
+            android:orientation="horizontal"
+            tools:ignore="ExtraText">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="133dp"
-            android:src="@drawable/user_avatar" />
+            <!-- 상단 텍스트뷰 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="40sp" />
 
-        <TextView
-            android:id="@+id/announcementText"
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            android:gravity="center"
-            android:text="홍길순"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            tools:ignore="HardcodedText" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profileImageView"
+                    android:layout_width="110dp"
+                    android:layout_height="105dp"
+                    android:src="@drawable/ic_boy"
+                    app:civ_border_color="#C3C3C3"
+                    app:civ_border_overlay="false"
+                    app:civ_border_width="2dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/nameTextView"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <FrameLayout
+                    android:id="@+id/cameraIconContainer"
+                    android:layout_width="39dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/circle_background"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.256"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="1.0">
+
+                    <ImageView
+                        android:id="@+id/cameraIcon"
+                        android:layout_width="32dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_photo"
+                        tools:ignore="MissingConstraints" />
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/nameTextView"
+                    android:layout_width="170dp"
+                    android:layout_height="34dp"
+                    android:text=""
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.73"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.495" />
+
+                <!-- 나머지 버튼들과 뷰들을 여기에 추가 -->
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </LinearLayout>
+
+
+        <!-- 구분선 -->
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#CCCCCC" />
 
+        <!-- 정보 수정 버튼 -->
+
+        <!-- 구분선 -->
         <Button
             android:id="@+id/my_editUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp"
-            android:text="정보수정                                       > "
-            android:gravity="left"
-            android:textColor="@color/black"
-            android:textSize="18sp"
             android:background="@android:color/transparent"
             android:elevation="0dp"
+            android:gravity="left"
+            android:text="정보수정                                       > "
+            android:textColor="@color/black"
+            android:textSize="18sp"
             tools:ignore="HardcodedText" />
 
         <View
@@ -55,6 +115,7 @@
             android:layout_height="1dp"
             android:background="#CCCCCC" />
 
+        <!-- 문의하기 버튼 -->
         <Button
             android:id="@+id/my_contact"
             android:layout_width="match_parent"
@@ -69,11 +130,13 @@
             android:elevation="0dp"
             tools:ignore="HardcodedText" />
 
+        <!-- 구분선 -->
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#CCCCCC" />
 
+        <!-- 신고하기 버튼 -->
         <Button
             android:id="@+id/my_report"
             android:layout_width="match_parent"
@@ -88,23 +151,27 @@
             android:elevation="0dp"
             tools:ignore="HardcodedText" />
 
+        <!-- 구분선 -->
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#CCCCCC" />
 
+        <!-- 로그아웃 버튼 -->
+
+        <!-- 구분선 -->
         <Button
             android:id="@+id/my_logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="로그아웃                                       >"
-            android:gravity="left"
-            android:textColor="@color/black"
-            android:textSize="18sp"
             android:background="@android:color/transparent"
             android:elevation="0dp"
+            android:gravity="left"
+            android:text="로그아웃                                       >"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             tools:ignore="HardcodedText" />
 
         <View
