--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/productImageView"
-        android:layout_width="78dp"
-        android:layout_height="72dp"
+        android:layout_width="74dp"
+        android:layout_height="89dp"
         android:layout_alignParentStart="true"
         android:scaleType="fitCenter" />
 
@@ -19,6 +19,14 @@
         android:layout_toEndOf="@id/productImageView"
         android:orientation="vertical">
 
+
+        <TextView
+            android:id="@+id/refIdTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#131313"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/productNameTextView"
