--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/et_pass2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
+        android:ems="10"
+        android:hint="비밀번호"
+        android:inputType="text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="@+id/et_id2"
+        app:layout_constraintStart_toStartOf="@+id/et_id2"
+        app:layout_constraintTop_toBottomOf="@+id/et_id2" />
+
     <Button
         android:id="@+id/btn_login"
         android:layout_width="0dp"
@@ -47,19 +62,15 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_login"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/et_pass2"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btn_findPass"
+        android:layout_width="259dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:hint="비밀번호"
-        android:inputType="text"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="@+id/et_id2"
-        app:layout_constraintStart_toStartOf="@+id/et_id2"
-        app:layout_constraintTop_toBottomOf="@+id/et_id2" />
+        android:layout_marginTop="17dp"
+        android:text="비밀번호 찾기"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="@+id/btn_register2"
+        app:layout_constraintStart_toStartOf="@+id/btn_register2"
+        app:layout_constraintTop_toBottomOf="@+id/btn_register2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
