--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,6 +13,7 @@
     android:layout_height="match_parent">
 
     <!-- 이미지 뷰 -->
+
     <ImageView
         android:id="@+id/photoImageView"
         android:layout_width="208dp"
@@ -113,3 +121,4 @@
         app:layout_constraintTop_toBottomOf="@id/takePhotoButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
