보관함, 찜목록, 테마, 앱이름 수정

--- a/app/src/main/res/layout/activity_locker.xml
+++ b/app/src/main/res/layout/activity_locker.xml
@@ -14,7 +14,7 @@
         android:ems="10"
         android:hint="비밀번호를 입력하세요 "
         android:gravity="center"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:paddingTop="30sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
