--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="비밀번호"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="@+id/et_id2"
         app:layout_constraintStart_toStartOf="@+id/et_id2"
