--- a/app/src/main/res/layout/activity_want.xml
+++ b/app/src/main/res/layout/activity_want.xml
@@ -10,8 +10,8 @@
         android:id="@+id/scrollView3"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -20,117 +20,99 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:text="찜 목록"
-                android:textAlignment="center"
-                android:textColor="#131313"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-            </androidx.recyclerview.widget.RecyclerView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="4dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/item_total"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/textView13"
+                    android:layout_width="277dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
                     android:layout_weight="1"
-                    android:text="Count:"
-                    android:textColor="#6C6868"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/itemTxt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="개"
-                    android:textColor="#6C6868"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Items Total:"
-                    android:textColor="#6C6868"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/taxTxt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="$0"
-                    android:textColor="#6C6868"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/total"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Total:"
-                    android:textColor="#6C6868"
+                    android:text=" 찜목록"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textSize="30sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/totalTxt"
-                    android:layout_width="wrap_content"
+                <Button
+                    android:id="@+id/button4"
+                    android:layout_width="68dp"
                     android:layout_height="wrap_content"
-                    android:text="$0"
-                    android:textColor="#6C6868"
-                    android:textSize="30sp"
-                    android:textStyle="bold" />
+                    android:layout_marginRight="10dp"
+                    android:text="편집" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/myButton"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:text="CheckOut" />
+                android:layout_height="435dp"
+                android:orientation="horizontal">
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="439dp">
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="105dp"
+                        android:layout_marginTop="30dp">
+
+                        <ImageView
+                            android:id="@+id/imageView6"
+                            android:layout_width="90dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            app:srcCompat="@drawable/test_img01" />
+
+                        <ImageView
+                            android:id="@+id/imageView5"
+                            android:layout_width="125dp"
+                            android:layout_height="117dp"
+                            app:srcCompat="@drawable/test_img02" />
+
+                        <ImageView
+                            android:id="@+id/imageView7"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            app:srcCompat="@drawable/image" />
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/textView8"
+                            android:layout_width="114dp"
+                            android:layout_height="match_parent"
+                            android:scrollHorizontally="false"
+                            android:text="호박고구마"
+                            android:gravity="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+                        <TextView
+                            android:id="@+id/textView10"
+                            android:layout_width="85dp"
+                            android:layout_height="wrap_content"
+                            android:text="맛난 사과"
+                            android:gravity="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+                        <TextView
+                            android:id="@+id/textView12"
+                            android:layout_width="122dp"
+                            android:layout_height="26dp"
+                            android:gravity="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+                    </TableRow>
+
+                </TableLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
